{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "7bce39e9-5b20-4600-ab86-5219810c0b50",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e6b3f71f-baa0-491b-87f1-03c4f6c8bdea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select/Jump",
                    "type": "Button",
                    "id": "ffac42cd-d5c0-43ec-9f7e-8e483dfebb9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "16c3e368-6651-48f0-a0af-c080dab2188c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "5816760b-f45c-43b6-b35b-327d1ce55f73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "0bff6c88-a0d3-40ac-a48e-86a70f8541dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "547d80f8-3038-47ea-88fb-bb8d8192c7ea",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fff777bc-4506-4229-a00d-294b438d1716",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Select/Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2345aa36-b791-4af8-9e18-b620ac2745bf",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9400780a-6e69-4007-8866-56225451b89d",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52f560dc-26b5-42b2-8a21-ef5d736cd322",
                    "path": "<Gamepad>/start",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}